--- a/about.html
+++ b/about.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="images/ezgif.com-gif-maker.png" />
-
+    <link rel="stylesheet" type="text/css" href="css/indexstyle.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/social.css">
-    <link rel="stylesheet" type="text/css" href="css/contactstyle.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Contact Page</title>
+    <title>About Page</title>
 
 
 
@@ -34,13 +31,13 @@
         <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item ">
-                    <a class="nav-link " href="about.html">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link active" href="about.html">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
 
                 </li>
@@ -48,57 +45,49 @@
         </div>
     </nav>
 
+
+
+
+
+
+    <!-- About Card -->
+
     <div class="container">
 
-        <div id="pcard" class="card mb-3" style="max-width: 100%;">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1 id="contact">Contact Me
+        <div class="row">
+            <div class="card mb-3" style="max-width: 100%;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="images/IMG_1175.JPG" class="card-img" alt="">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h1 class="card-title" id="about-me">About Me</h1>
+                            <hr>
+                            <p class="card-text"> I'm currently the Co-Founder & COO of a Denver based startup called Outdoorful. At Outdoorful, we're making the world a better place through the powerful and positive benefits provided by the great outdoors.<br><br>I'm currently
+                                enrolled in the University of Denver's Full-Stack Bootcamp through May 2020. My goal with the course is to grow a better understanding of Outdoorful's technical infrastructure in order to better manage our full-time Engineers
+                                and all technical project prioritization. </p>
 
-                    </h1>
-                    <hr>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <div class="contact-info">
-
-                <h3>Office: 860-794-9360</h3><br>
-                <h3>Email:
-                    <a href="mailto:jordan.r.servos@outdoorful.com">jordan.r.servos@outdoorful.com</a></h3>
-
-            </div>
-
-            <i class="fal fa-comment-alt-lines"></i>
-
-
-            <div class="social">
-                <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/jservos/">
-                    <span class="fa fa-linkedin"></span>
-                </a>
-
-                <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/outdoorful/?hl=en">
-                    <span class="fa fa-instagram"></span>
-                </a>
-
-                <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/Outdoorful-426328904639127/">
-                    <span class="fa fa-facebook"></span>
-                </a>
-
-                <a class="btn btn-social-icon btn-github" href="https://github.com/jordanservos">
-                    <span class="fa fa-github"></span>
-                </a>
-
-                <a class="btn btn-social-icon btn-reddit" href="https://www.reddit.com/user/outdoorful/">
-                    <span class="fa fa-reddit"></span>
-                </a>
-            </div>
-
-
-
-
         </div>
 
+        <div class="jumbotron" id="tron2">
+            <h1 class="display-4" id="out-head">Outdoorful</h1>
+            <p class="lead">Making adventure part of everyday life.</p>
+
+            <a class="btn btn-primary btn-lg" id="jumbo-btn" href="https://www.outdoorful.com/learn-more" role="button">Learn more</a>
+        </div>
+
+
     </div>
+
+
+
+
+    <!-- Footer -->
 
     <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
         <div class="container text-center">
@@ -108,7 +97,7 @@
 
 
 
-
+    <!-- JavaScript -->
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
