--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="images/ezgif.com-gif-maker.png" />
-    <link rel="stylesheet" type="text/css" href="css/indexstyle.css">
+    <link rel="stylesheet" type="text/css" href="css/index2.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+    crossorigin="anonymous"
+  />
     <title>About Page</title>
 
 
@@ -23,7 +28,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="http:\\www.outdoorful.com">
-            <img src="images/Angled Tree Logo.svg" width="53" height="40" class="d-inline-block align-center" alt=""> Jordan Servos | Founder & Tecnologist
+            <img src="images/Angled Tree Logo.svg" width="53" height="40" class="d-inline-block align-center" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -31,7 +36,7 @@
         <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item ">
-                    <a class="nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link " href="about.html">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -45,67 +50,33 @@
         </div>
     </nav>
 
-   <!-- Jumbotron -->
 
-   <div class="jumbotron" id="tron">
-    <h1 class="display-4">Welcome...</h1>
-    <p class="lead">Jordan Servos is an experienced full stack technologist, entrepreneur and Co-Founder of Outdoorful, Inc</p>
-    <hr class="my-4" id="hr">
-    <p>Jump to my portfolio to check out my software development journey</p>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" href="/portfolio.html" role="button" id="checkitout">Check it Out</a>
-    </p>
-  </div>
-
-
-
-
-    <!-- About Card -->
 
     <div class="container">
 
-        <div class="row">
-            <div class="card mb-3" style="max-width: 100%;">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="images/IMG_1175.JPG" class="card-img" alt="">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h1 class="card-title" id="about-me">About Me</h1>
-                            <hr>
-                            <p class="card-text"> I'm currently the Co-Founder & COO of a Denver based startup called Outdoorful. At Outdoorful, we're making the world a better place through the powerful and positive benefits provided by the great outdoors.<br><br>I'm currently
-                                enrolled in the University of Denver's Full-Stack Bootcamp through May 2020. My goal with the course is to grow a better understanding of Outdoorful's technical infrastructure in order to better manage our full-time Engineers
-                                and all technical project prioritization. </p>
+<div class="row">
+<div class="col-lg-12">
+<h1 id="big-name">Jordan  <span id="last"> Servos </span></h1>
+<h3 id="sub">Founder & Tecnologist</h3>
+<div class="icons">
+    <a href="https://www.linkedin.com/in/jservos/" class="space"> 
+      <i class="fab fa-linkedin fa-2x" id="linked"></i> 
+    </a>
+    <a href="https://github.com/jordanservos" class="space"> 
+      <i class="fab fa-github fa-2x" id="git"></i> 
+    </a>
+   
+   
+  </div>
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="jumbotron" id="tron2">
-            <h1 class="display-4" id="out-head">Outdoorful</h1>
-            <p class="lead">Making adventure part of everyday life.</p>
+</div>
 
-            <a class="btn btn-primary btn-lg" id="jumbo-btn" href="https://www.outdoorful.com/learn-more" role="button">Learn more</a>
-        </div>
-
+</div>
 
     </div>
 
-
-
-
-    <!-- Footer -->
-
-    <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-        <div class="container text-center">
-            <small>Copyright &copy; Outdoorful.com</small>
-        </div>
-    </footer>
-
-
+  
 
     <!-- JavaScript -->
 
