--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <!-- Navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="http:\\www.outdoorful.com">
+        <a class="navbar-brand" href="index.html">
             <img src="images/Angled Tree Logo.svg" width="53" height="40" class="d-inline-block align-center" alt=""> Jordan Servos | Founder & Tecnologist
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item ">
-                    <a class="nav-link " href="index.html">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link " href="about.html">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="portfolio.html">Portfolio</a>
